Fix spacing around add button on with associations form; Remove old association code

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -1335,7 +1335,7 @@ body#account {
 body .association #add {
   margin-bottom: 6px; }
   body .association #add input {
-    width: 82%;
+    width: 78%;
     margin: 0; }
   body .association #add .cta {
     width: 12%;
