--- a/src/sass/views/associations.scss
+++ b/src/sass/views/associations.scss
@@ -2,7 +2,7 @@ body .association {
   #add {
     margin-bottom:6px;
     input {
-      width:82%;
+      width:78%;
       margin:0;
     }
     .cta {
